--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -108,6 +108,8 @@ services:
     <<: *common
     image: ccr.ccs.tencentyun.com/self-hosted/minio:RELEASE.2025-02-28T09-55-16Z
     container_name: swanlab-minio
+    ports:
+      - "9000:9000"
     volumes:
       - ./data/minio:/data
     environment:
