fix: access images (#37)
Fix #37

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -108,6 +108,8 @@ services:
     <<: *common
     image: ccr.ccs.tencentyun.com/self-hosted/minio:RELEASE.2025-02-28T09-55-16Z
     container_name: swanlab-minio
+    ports:
+      - "9000:9000"
     volumes:
       - ./data/minio:/data
     environment:
@@ -146,7 +148,7 @@ services:
   # swanlab services
   swanlab-server:
     <<: *common
-    image: ccr.ccs.tencentyun.com/self-hosted/swanlab-server:v1.2
+    image: ccr.ccs.tencentyun.com/self-hosted/swanlab-server:v1.2.1
     container_name: swanlab-server
     depends_on:
       postgres:
